# chan-assist

./: .gitignore  .gitmodules  CLAUDE.md  README.md  pyproject.toml
chan_assist/: __init__.py  config.py  db.py  models.py  persistence.py  scan_service.py  stock_pool.py
doc/chanpy/claude/: architecture.md  info.md
scripts/: run_sample_charts.py  run_scan.py  scan_all_a.py  scan_all_a_v2.py  test_chan_output.py  test_rules.py
strategy/: _bsp_filters.py  _bsp_modify.py  _zs_patch.py  accessor.py  chan_strategy.py
strategy/bsp/: bsp_modify.py  rules_bsp_filter.py
strategy/engine/: executor.py  rule_base.py
strategy/zs/: zs_detect.py
tests/fixtures/: test_stocks_b3.txt
tests/integration/: test_db_roundtrip.py  test_filters_scan_chain.py  test_m3_compatibility.py  test_mvp_validation.py  test_persistence_roundtrip.py  test_run_one_symbol.py  test_scan_full_loop.py  test_smoke.py  test_stock_pool_integration.py  test_strategy_filter_chain.py
tests/regression/: test_architecture_boundary.py  test_batch_scan_safety.py  test_filter_config_safety.py  test_m3_boundary.py  test_mvp_closure.py  test_no_legacy_framework.py  test_persistence_safety.py  test_single_stock_safety.py  test_status_validation.py  test_stock_pool_safety.py  test_strategy_m2_safety.py
tests/unit/: test_chan_strategy.py  test_db.py  test_imports.py  test_legacy_migration.py  test_models.py  test_persistence.py  test_run_scan.py  test_scan_service.py  test_stock_filters.py  test_stock_pool.py  test_strategy_m2.py  test_target_bsp_types.py
(+1 files in other folders)
